0.7/_sources/checks_gallery/vision/model_evaluation/plot_single_dataset_scalar_performance.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "checks_gallery/vision/model_evaluation/plot_single_dataset_scalar_performance.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_checks_gallery_vision_model_evaluation_plot_single_dataset_scalar_performance.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_checks_gallery_vision_model_evaluation_plot_single_dataset_scalar_performance.py:


Single Dataset Scalar Performance
*********************************

This notebooks provides an overview for using and understanding single dataset scalar performance check.

**Structure:**

* `What Is the Purpose of the Check? <#what-is-the-purpose-of-the-check>`__
* `Generate data an model <#generate-data-and-model>`__
* `Run the check <#run-the-check>`__
* `Define a condition <#define-a-condition>`__

What Is the Purpose of the Check?
=================================
This check returns a metric result as a single scalar, which is especially useful for monitoring a model in production.

Some metrics return a single score, but others return a tensor of scores.

For example, Precision returns a tensor in the size of the number of classes. In that case, we will use a
reduce function - a function that aggregates the scores into a scalar.
In this example we use 'nanmean' that returns the mean over the classes, while ignoring NaNs.

.. GENERATED FROM PYTHON SOURCE LINES 27-29

Generate data and model
-----------------------

.. GENERATED FROM PYTHON SOURCE LINES 29-33

.. code-block:: default


    from deepchecks.vision.checks import SingleDatasetScalarPerformance
    from deepchecks.vision.datasets.classification import mnist








.. GENERATED FROM PYTHON SOURCE LINES 34-39

.. code-block:: default



    mnist_model = mnist.load_model()
    train_ds = mnist.load_dataset(train=True, object_type='VisionData')








.. GENERATED FROM PYTHON SOURCE LINES 40-47

Run the check
-------------
We will run the check with the model defined above.

The check will use the default classification metric -
`ignite.Accuracy <https://pytorch.org/ignite/generated/ignite.metrics.Accuracy.html>`__.
The default metric returns a scalar, therefore we will use the reduce function default - None.

.. GENERATED FROM PYTHON SOURCE LINES 47-53

.. code-block:: default



    check = SingleDatasetScalarPerformance()
    result = check.run(train_ds, mnist_model)
    result





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Validating Input:
    |     | 0/1 [00:00<?, ? /s]    Validating Input:
    |#####| 1/1 [00:00<00:00, 36.15 /s]
    Ingesting Batches:
    |                                                                                                                                                             | 0/157 [00:00<?, ? Batch/s]
    Ingesting Batches:
    |#########                                                                                                                                                    | 9/157 [00:00<00:01, 84.41 Batch/s]
    Ingesting Batches:
    |###################                                                                                                                                          | 19/157 [00:00<00:01, 90.18 Batch/s]
    Ingesting Batches:
    |############################9                                                                                                                                | 29/157 [00:00<00:01, 90.76 Batch/s]
    Ingesting Batches:
    |#######################################                                                                                                                      | 39/157 [00:00<00:01, 91.66 Batch/s]
    Ingesting Batches:
    |#################################################                                                                                                            | 49/157 [00:00<00:01, 92.48 Batch/s]
    Ingesting Batches:
    |###########################################################                                                                                                  | 59/157 [00:00<00:01, 92.88 Batch/s]
    Ingesting Batches:
    |#####################################################################                                                                                        | 69/157 [00:00<00:00, 92.62 Batch/s]
    Ingesting Batches:
    |###############################################################################                                                                              | 79/157 [00:00<00:00, 92.89 Batch/s]
    Ingesting Batches:
    |#########################################################################################                                                                    | 89/157 [00:00<00:00, 92.28 Batch/s]
    Ingesting Batches:
    |###################################################################################################                                                          | 99/157 [00:01<00:00, 92.03 Batch/s]
    Ingesting Batches:
    |#############################################################################################################                                                | 109/157 [00:01<00:00, 91.28 Batch/s]
    Ingesting Batches:
    |#######################################################################################################################                                      | 119/157 [00:01<00:00, 90.55 Batch/s]
    Ingesting Batches:
    |#################################################################################################################################                            | 129/157 [00:01<00:00, 91.52 Batch/s]
    Ingesting Batches:
    |###########################################################################################################################################                  | 139/157 [00:01<00:00, 92.60 Batch/s]
    Ingesting Batches:
    |#####################################################################################################################################################        | 149/157 [00:01<00:00, 92.50 Batch/s]
    Ingesting Batches:
    |#############################################################################################################################################################| 157/157 [00:01<00:00, 92.50 Batch/s]

    Computing Check:
    |     | 0/1 [00:00<?, ? Check/s]

    Computing Check:
    |#####| 1/1 [00:00<00:00, 4240.95 Check/s]                                                     
                                                                                                                                                                                                                           

                                                               

.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Single Dataset Scalar Performance</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
        <script>
            (!window.navigator.onLine ? alert('needs internet connection') : '');
        </script>
    </head>
    <body>
    
    <script src="" crossorigin="anonymous"></script>
    <script type="application/vnd.jupyter.widget-state+json">
    {
      "version_major": 2,
      "version_minor": 0,
      "state": {
        "c72024c7f7f947248c08e67d1b29b440": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_3beaae81967c4374ae5be90a4b3bca2e",
              "IPY_MODEL_1ffbb002383541faacd443cdb81802ac",
              "IPY_MODEL_79d0084ce8834c54ae3d5c30dbc486d5",
              "IPY_MODEL_143ea8af4bef4ff29ddac4943efc4bac"
            ],
            "layout": "IPY_MODEL_7db0bac54a674f379a080bf0f537034d"
          }
        },
        "3beaae81967c4374ae5be90a4b3bca2e": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_b3f24b73b0ab4c85a4d96f02c73669c7",
            "style": "IPY_MODEL_c4b56a5f545c4068aa33f47b27aa6da9",
            "value": "<h4><b>Single Dataset Scalar Performance</b></h4>"
          }
        },
        "b3f24b73b0ab4c85a4d96f02c73669c7": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "c4b56a5f545c4068aa33f47b27aa6da9": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "1ffbb002383541faacd443cdb81802ac": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_ef983ec65da04eeebfba40a4f2f45158",
            "style": "IPY_MODEL_235d21bb6a914285a7086fe37e0b6782",
            "value": "<p>Calculate a performance metric as a scalar for a given model and a given dataset.</p>"
          }
        },
        "ef983ec65da04eeebfba40a4f2f45158": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "235d21bb6a914285a7086fe37e0b6782": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "79d0084ce8834c54ae3d5c30dbc486d5": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_3decd46f2c9446d583ebad3789aaa244",
            "style": "IPY_MODEL_52445f7af25340209afcac11ba5a1b9f"
          }
        },
        "3decd46f2c9446d583ebad3789aaa244": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "52445f7af25340209afcac11ba5a1b9f": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "143ea8af4bef4ff29ddac4943efc4bac": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_0b77b60fcaa8453daf3d171f35bfed50",
              "IPY_MODEL_98ff285549794e0ba51f441b5eacc0b7"
            ],
            "layout": "IPY_MODEL_5ed7a19eef534b16823a5f7526ac9c2d"
          }
        },
        "0b77b60fcaa8453daf3d171f35bfed50": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_a60b1f3e9b634b1e9b08e058fca5a6a1",
            "style": "IPY_MODEL_7d00221202564051bce4beb50ecec847",
            "value": "<h5><b>Additional Outputs</b></h5>"
          }
        },
        "a60b1f3e9b634b1e9b08e058fca5a6a1": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "7d00221202564051bce4beb50ecec847": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "98ff285549794e0ba51f441b5eacc0b7": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_05eb0b7d316c4329971f4de11eb0f6f7",
            "style": "IPY_MODEL_9068bc82234e4bb6a87e3f22e7e3b5fb",
            "value": "<div><p style=\"font-size:0.9em;line-height:1;\"><i>Note - data sampling: Data is sampled from the original dataset, running on 10000 samples out of 60000. Sample size can be controlled with the \"n_samples\" parameter.</i></p></div>"
          }
        },
        "05eb0b7d316c4329971f4de11eb0f6f7": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "9068bc82234e4bb6a87e3f22e7e3b5fb": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "5ed7a19eef534b16823a5f7526ac9c2d": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "7db0bac54a674f379a080bf0f537034d": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        }
      }
    }
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "c72024c7f7f947248c08e67d1b29b440"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 54-58

The result value is a dictionary with the following fields:
score - the actual result,
metric - the name of metric used
reduce - the name of the reduce function used.

.. GENERATED FROM PYTHON SOURCE LINES 58-60

.. code-block:: default

    result.value





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'score': 0.9837, 'metric': 'accuracy', 'reduce': None}



.. GENERATED FROM PYTHON SOURCE LINES 61-63

Now we will run a check with parameters, to use a metric and a reduce function different from the defaults.
We will also pass names for them, so that the return value will look neat.

.. GENERATED FROM PYTHON SOURCE LINES 63-70

.. code-block:: default

    from ignite.metrics import Precision
    from torch import nanmean

    check = SingleDatasetScalarPerformance(Precision(), nanmean, metric_name='precision', reduce_name='mean')
    result = check.run(train_ds, mnist_model)
    result.value





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Validating Input:
    |     | 0/1 [00:00<?, ? /s]    Validating Input:
    |#####| 1/1 [00:00<00:00, 36.42 /s]
    Ingesting Batches:
    |                                                                                                                                                             | 0/157 [00:00<?, ? Batch/s]
    Ingesting Batches:
    |#########                                                                                                                                                    | 9/157 [00:00<00:01, 87.50 Batch/s]
    Ingesting Batches:
    |###################                                                                                                                                          | 19/157 [00:00<00:01, 92.12 Batch/s]
    Ingesting Batches:
    |############################9                                                                                                                                | 29/157 [00:00<00:01, 89.94 Batch/s]
    Ingesting Batches:
    |#######################################                                                                                                                      | 39/157 [00:00<00:01, 91.21 Batch/s]
    Ingesting Batches:
    |#################################################                                                                                                            | 49/157 [00:00<00:01, 89.94 Batch/s]
    Ingesting Batches:
    |###########################################################                                                                                                  | 59/157 [00:00<00:01, 87.06 Batch/s]
    Ingesting Batches:
    |#####################################################################                                                                                        | 69/157 [00:00<00:00, 89.51 Batch/s]
    Ingesting Batches:
    |###############################################################################                                                                              | 79/157 [00:00<00:00, 90.91 Batch/s]
    Ingesting Batches:
    |#########################################################################################                                                                    | 89/157 [00:00<00:00, 91.02 Batch/s]
    Ingesting Batches:
    |###################################################################################################                                                          | 99/157 [00:01<00:00, 89.23 Batch/s]
    Ingesting Batches:
    |############################################################################################################                                                 | 108/157 [00:01<00:00, 87.48 Batch/s]
    Ingesting Batches:
    |####################################################################################################################9                                        | 117/157 [00:01<00:00, 86.22 Batch/s]
    Ingesting Batches:
    |##############################################################################################################################                               | 126/157 [00:01<00:00, 85.09 Batch/s]
    Ingesting Batches:
    |#######################################################################################################################################                      | 135/157 [00:01<00:00, 84.44 Batch/s]
    Ingesting Batches:
    |################################################################################################################################################             | 144/157 [00:01<00:00, 84.02 Batch/s]
    Ingesting Batches:
    |#########################################################################################################################################################    | 153/157 [00:01<00:00, 81.31 Batch/s]
    Ingesting Batches:
    |#############################################################################################################################################################| 157/157 [00:01<00:00, 81.31 Batch/s]

    Computing Check:
    |     | 0/1 [00:00<?, ? Check/s]

    Computing Check:
    |#####| 1/1 [00:00<00:00, 510.50 Check/s]                                                     
                                                                                                                                                                                                                           

                                                              
    {'score': 0.9837194021061553, 'metric': 'precision', 'reduce': 'mean'}



.. GENERATED FROM PYTHON SOURCE LINES 71-76

Define a Condition
==================
We can define a condition to validate that our model performance score is above or below a certain threshold.
The condition is defined as a function that takes the results of the check as input and
returns a ConditionResult object.

.. GENERATED FROM PYTHON SOURCE LINES 76-83

.. code-block:: default


    check = SingleDatasetScalarPerformance()
    check.add_condition_greater_than(0.5)
    result = check.run(train_ds, mnist_model)
    result.show(show_additional_outputs=False)






.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Validating Input:
    |     | 0/1 [00:00<?, ? /s]    Validating Input:
    |#####| 1/1 [00:00<00:00, 38.47 /s]
    Ingesting Batches:
    |                                                                                                                                                             | 0/157 [00:00<?, ? Batch/s]
    Ingesting Batches:
    |#########                                                                                                                                                    | 9/157 [00:00<00:01, 82.97 Batch/s]
    Ingesting Batches:
    |##################                                                                                                                                           | 18/157 [00:00<00:01, 83.11 Batch/s]
    Ingesting Batches:
    |###########################                                                                                                                                  | 27/157 [00:00<00:01, 82.46 Batch/s]
    Ingesting Batches:
    |#####################################                                                                                                                        | 37/157 [00:00<00:01, 86.76 Batch/s]
    Ingesting Batches:
    |###############################################                                                                                                              | 47/157 [00:00<00:01, 89.55 Batch/s]
    Ingesting Batches:
    |########################################################9                                                                                                    | 57/157 [00:00<00:01, 91.09 Batch/s]
    Ingesting Batches:
    |###################################################################                                                                                          | 67/157 [00:00<00:00, 90.79 Batch/s]
    Ingesting Batches:
    |#############################################################################                                                                                | 77/157 [00:00<00:00, 91.28 Batch/s]
    Ingesting Batches:
    |#######################################################################################                                                                      | 87/157 [00:00<00:00, 91.44 Batch/s]
    Ingesting Batches:
    |#################################################################################################                                                            | 97/157 [00:01<00:00, 92.60 Batch/s]
    Ingesting Batches:
    |###########################################################################################################                                                  | 107/157 [00:01<00:00, 92.99 Batch/s]
    Ingesting Batches:
    |####################################################################################################################9                                        | 117/157 [00:01<00:00, 90.79 Batch/s]
    Ingesting Batches:
    |###############################################################################################################################                              | 127/157 [00:01<00:00, 92.32 Batch/s]
    Ingesting Batches:
    |#########################################################################################################################################                    | 137/157 [00:01<00:00, 91.04 Batch/s]
    Ingesting Batches:
    |###################################################################################################################################################          | 147/157 [00:01<00:00, 92.83 Batch/s]
    Ingesting Batches:
    |#############################################################################################################################################################| 157/157 [00:01<00:00, 92.83 Batch/s]

    Computing Check:
    |     | 0/1 [00:00<?, ? Check/s]

    Computing Check:
    |#####| 1/1 [00:00<00:00, 4165.15 Check/s]                                                     
                                                                                                                                                                                                                           

                                                               

.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Single Dataset Scalar Performance</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
        <script>
            (!window.navigator.onLine ? alert('needs internet connection') : '');
        </script>
    </head>
    <body>
    

    <!-- Load require.js. Delete this if your page already loads require.js -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" crossorigin="anonymous"></script>
    <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed-amd.js" crossorigin="anonymous"></script>

    <script type="application/vnd.jupyter.widget-state+json">
    {
      "version_major": 2,
      "version_minor": 0,
      "state": {
        "07855a165ec0424d89395bb62881899c": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_e56f953989724995b4f49bfad64227ea",
              "IPY_MODEL_497ec53218394dc596fe47a2fa07844a",
              "IPY_MODEL_8c867ca6197c46e69dbef6cbc46814d4"
            ],
            "layout": "IPY_MODEL_97e48cd06b834b298cdfc940fc9191dd"
          }
        },
        "e56f953989724995b4f49bfad64227ea": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_8ff36b034c55406f9b1eba719292a7e6",
            "style": "IPY_MODEL_c24b1b91c0a1428daf2bda4c31245144",
            "value": "<h4><b>Single Dataset Scalar Performance</b></h4>"
          }
        },
        "8ff36b034c55406f9b1eba719292a7e6": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "c24b1b91c0a1428daf2bda4c31245144": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "497ec53218394dc596fe47a2fa07844a": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_cb19198ede564d25b775a2f4aa50b136",
            "style": "IPY_MODEL_535562b6c3f740349bfd0c8332ee588a",
            "value": "<p>Calculate a performance metric as a scalar for a given model and a given dataset.</p>"
          }
        },
        "cb19198ede564d25b775a2f4aa50b136": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "535562b6c3f740349bfd0c8332ee588a": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "8c867ca6197c46e69dbef6cbc46814d4": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_38431a5357594df2aae34a06100df782",
            "style": "IPY_MODEL_14f707071d3d48f9ba8b3f75acdac389",
            "value": "<h5><b>Conditions Summary</b></h5><style type=\"text/css\">\n#T_bffb2_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_bffb2_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_bffb2_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_bffb2_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_bffb2_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_bffb2_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Condition</th>\n      <th class=\"col_heading level0 col2\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_bffb2_row0_col0\" class=\"data row0 col0\" ><div style=\"color: green;text-align: center\">\u2713</div></td>\n      <td id=\"T_bffb2_row0_col1\" class=\"data row0 col1\" >Score is greater than 0.5</td>\n      <td id=\"T_bffb2_row0_col2\" class=\"data row0 col2\" >The score accuracy is 0.9837</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "38431a5357594df2aae34a06100df782": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "14f707071d3d48f9ba8b3f75acdac389": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "97e48cd06b834b298cdfc940fc9191dd": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        }
      }
    }
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "07855a165ec0424d89395bb62881899c"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  5.474 seconds)


.. _sphx_glr_download_checks_gallery_vision_model_evaluation_plot_single_dataset_scalar_performance.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_single_dataset_scalar_performance.py <plot_single_dataset_scalar_performance.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_single_dataset_scalar_performance.ipynb <plot_single_dataset_scalar_performance.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
